--- a/football-player-offer-microservice-lra/src/main/resources/project-defaults.yml
+++ b/football-player-offer-microservice-lra/src/main/resources/project-defaults.yml
@@ -3,7 +3,7 @@ swarm:
     data-sources:
       FootballPlayerOfferDS:
         driver-name: mysql
-        connection-url: jdbc:mysql://localhost:3306/football_player_offer_registry
+        connection-url: jdbc:mysql://localhost:3306/football_player_offer_registry?useSSL=false&allowPublicKeyRetrieval=true
         user-name: root
         password: root
         valid-connection-checker-class-name: org.jboss.jca.adapters.jdbc.extensions.mysql.MySQLValidConnectionChecker
